<resources>
    <string name="app_name">Lesson05AndroidWeather</string>
    <string name="empty">Пусто</string>

    <string-array name="Cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Новосибирск</item>
        <item>Самара</item>

    </string-array>

    <string name="temperatureStr">Температура</string>
    <string name="windStr">Ветер</string>
    <string name="pressureStr">Давление</string>
    <string name="showWeather">Показать</string>
    <string name="to_back">Назад</string>
    <string name="enterCity">Выберите город</string>
    <string name="meow">Мяу</string>
    <string name="selectcity">Выбрать</string>
    <string name="selectcityStr">Выберете город</string>

    <string name="settings">Настройки</string>
    <string name="select_font">Выберить размер шрифта</string>
    <string name="pref_size">Размер</string>
    <string name="set_new_fontsize">Устанавливает новый размер шрифта</string>
    <string name="font_size">Размер шрифта</string>




</resources>
