<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView android:id="@+id/tViewSelectedCity"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/enterCity"
            />

        <Button android:id="@+id/buttonSelectCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/selectcity"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/showWindChB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windStr"
        />

    <CheckBox
        android:id="@+id/showPressureChB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressureStr"
        />

    <!--<Button android:id="@+id/buttonShowWeather"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/showWeather"-->
        <!--/>-->


    <FrameLayout

        android:id="@+id/weather_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        ></FrameLayout>


</LinearLayout>